--- a/src/pages/posts/把二十岁刻入生命的脊梁.md
+++ b/src/pages/posts/把二十岁刻入生命的脊梁.md
@@ -1,23 +1,19 @@
 ---
-layout: "../layouts/MarkdownPost.astro"
-title: "草木皆宾"
-pubDate: 2023-04-09
-description: "热爱每一株小草，感谢每一束阳光"
+layout: "../../layouts/MarkdownPost.astro"
+title: "把二十岁刻入生命的脊梁"
+pubDate: 2022-11-11
+description: "某个夜晚的随笔"
+author: "cos"
 cover:
-  url: "https://www.apple.com.cn/newsroom/images/values/environment/Apple-Earth-Day-India-mangrove-Alibaug-canoe_Full-Bleed-Image.jpg.large_2x.jpg"
-  square: "https://www.apple.com.cn/newsroom/images/product/apps/standard/Apple-Freeform-hero_big.jpg.large_2x.jpg"
+  url: "https://s1.ax1x.com/2023/04/21/p9ESsbj.jpg"
+  square: "https://s1.ax1x.com/2023/04/21/p9ESsbj.jpg?resize=1&w=1920"
   alt: "cover"
-tags: ["cosine"]
-theme: "light"
+tags: ["生活"]
+theme: "dark"
 featured: true
 ---
 
----
-
-title: 把二十岁刻入生命的脊梁
-date: 2022-11-11
-
----
+![life |wide](https://s1.ax1x.com/2023/04/21/p9ESsbj.jpg?resize=1&w=1920)
 
 2022 年 11 月 11 日，深夜 11 点 23 分。
 
