feat: 添加文件夹

--- a/src/pages/posts/生活/吹风.md
+++ b/src/pages/posts/生活/吹风.md
@@ -1,11 +1,12 @@
 ---
-layout: "../../layouts/MarkdownPost.astro"
+layout: "../../../layouts/MarkdownPost.astro"
 title: "吹风"
 pubDate: 2022-12-13
 description: "风啊，飘向哪呢"
 author: "cos"
 cover:
   url: "https://s1.ax1x.com/2023/04/21/p9ECVbQ.jpg?resize=1&w=1920"
+  square: "https://s1.ax1x.com/2023/04/21/p9ECVbQ.jpg"
   alt: "cover"
 tags: ["生活"]
 theme: "dark"
