--- a/src/pages/posts/生活/把二十岁刻入生命的脊梁.md
+++ b/src/pages/posts/生活/把二十岁刻入生命的脊梁.md
@@ -1,5 +1,5 @@
 ---
-layout: "../../layouts/MarkdownPost.astro"
+layout: "../../../layouts/MarkdownPost.astro"
 title: "把二十岁刻入生命的脊梁"
 pubDate: 2022-11-11
 description: "某个夜晚的随笔"
