--- a/src/pages/posts/前端/前端框架.md
+++ b/src/pages/posts/前端/前端框架.md
@@ -5,8 +5,8 @@ pubDate: 2023-4-25
 description: "前端框架的意义是什么"
 author: "cos"
 cover:
-  url: "https://s2.loli.net/2022/05/02/RqBJ3vfXlhOP8wc.jpg"
-  square: "https://s2.loli.net/2022/05/02/RqBJ3vfXlhOP8wc.jpg"
+  url: "https://p1-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/1395b49b753142289a7e60c9d46c3631~tplv-k3u1fbpfcp-zoom-crop-mark:1512:1512:1512:851.awebp"
+  square: "https://p1-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/1395b49b753142289a7e60c9d46c3631~tplv-k3u1fbpfcp-zoom-crop-mark:1512:1512:1512:851.awebp?resize=1&w=1920"
   alt: "cover"
 tags: ["前端", "思考"]
 featured: true
@@ -27,6 +27,8 @@ featured: true
 倘若我先思考清楚这件事，再学习框架的话，估计会游刃有余许多。
 
 而这也是我写这篇文章的目的，一方面是总结自己的一些思考，另一方面是希望帮助到有这个需求的朋友。
+
+![前端框架 | center](https://p1-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/1395b49b753142289a7e60c9d46c3631~tplv-k3u1fbpfcp-zoom-crop-mark:1512:1512:1512:851.awebp)
 
 ## 脱离了框架的开发模式--过程驱动开发
 
@@ -126,7 +128,7 @@ return (
 
 状态同步是由框架内部为我们做的，不同的框架实现的原理不同，比如 vue 是基于依赖收集的，而 React 基于组件的整体重新渲染。
 
-（这些东西涉及到框架的内部实现原理，这里就不展开了，其实是我也不是很会 🤣）
+（这些东西涉及到框架的内部实现原理，这里就不展开了）
 
 可以这样理解，在传统的过程驱动开发的模式下，状态同步这件事是我们手动去做的，我们需要手动的使用宿主环境 API(DOM API) 去更新视图。
 
@@ -152,7 +154,7 @@ return (
 
 首先，JSX 和 模版语法 是两种不同声明虚拟 DOM 的风格。
 
-JSX 是由 React 提出的，语法类似于在 JS 中直接把 HTML 当成一个字面两来使用。
+JSX 是由 React 提出的，语法类似于在 JS 中直接把 HTML 当成一个字面量来使用。
 
 而模板语法则在 Vue 中使用的比较多，它是一种声明式的模板语法，类似于 HTML。
 
