删除不必要的文章

--- a/src/pages/posts/javascript/前端框架.md
+++ b/src/pages/posts/javascript/前端框架.md
@@ -5,12 +5,15 @@ pubDate: 2023-4-25
 description: "前端框架的意义是什么"
 author: "cos"
 cover:
-  url: "https://p1-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/1395b49b753142289a7e60c9d46c3631~tplv-k3u1fbpfcp-zoom-crop-mark:1512:1512:1512:851.awebp"
-  square: "https://p1-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/1395b49b753142289a7e60c9d46c3631~tplv-k3u1fbpfcp-zoom-crop-mark:1512:1512:1512:851.awebp?resize=1&w=1920"
+  url: "https://z1.ax1x.com/2023/09/14/pPWPHc8.png"
+  square: "https://z1.ax1x.com/2023/09/14/pPWPHc8.png"
   alt: "cover"
 tags: ["前端", "思考"]
+theme: "light"
 featured: true
 ---
+
+![|](https://z1.ax1x.com/2023/09/14/pPWPHc8.png)
 
 ## 为什么学习前端框架
 
