--- a/src/pages/posts/最爱下雨天/9-1.md
+++ b/src/pages/posts/最爱下雨天/9-1.md
@@ -2,7 +2,7 @@
 layout: "../../../layouts/MarkdownPost.astro"
 title: 下雨天
 pubDate: 2023-09-01
-# description: 奇怪了
+description: 
 author: "cos"
 cover:
   url: "https://pic.imgdb.cn/item/65071a1e661c6c8e546b59b6.jpg"
